Add testimonial and callouts to the welcome page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,21 @@
-%h1 This is the welcome placeholder
+#banner
+    .banner_content
+        %h1 My NoteBook
+        %p Never forget to take your notes again
+        %button= link_to "Sign Up", new_user_registration_path
+#testimonial
+    .wrapper
+        %p.quote "Now, I Could Catch any Idea"
+        %p.name - Abdel Hady Mohamed
+#callouts
+    .callout_inner
+        .wrapper
+            .callout
+                %h2 Super Fast
+                %p  Now, You can take you notes by a click of your mouse or a touch of your finger.
+            .callout
+                %h2 Accessible
+                %p You can Access your notes wherever where you are. From your phone, tablet or PC.
+            .callout
+                %h2 User Friendly
+                %p Hey, It is very easy to use.
