--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -19,3 +19,5 @@
             .callout
                 %h2 User Friendly
                 %p Hey, It is very easy to use.
+%footer
+    %p &copy; Abdel Hady Mohamed
