Add icons from font Awesome and Restyle Form pages

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -11,12 +11,15 @@
     .callout_inner
         .wrapper
             .callout
+                %i.fa.fa-rocket
                 %h2 Super Fast
                 %p  Now, You can take you notes by a click of your mouse or a touch of your finger.
             .callout
+                %i.fa.fa-hand-pointer-o
                 %h2 Accessible
                 %p You can Access your notes wherever where you are. From your phone, tablet or PC.
             .callout
+                %i.fa.fa-user
                 %h2 User Friendly
                 %p Hey, It is very easy to use.
 %footer
