--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -1,4 +1,5 @@
-%h1 Edit your Note
-
-= render 'form'
-= link_to "Cancel", note_path
+.wrapper_with_padding
+    %h1 Edit your Note
+    
+    = render 'form'
+    = link_to "Cancel", note_path, class: "button"
